<resources>
    <string name="app_name">Calc</string>
    <string name="clear_text">CE</string>
    <string name="bracket_text">()</string>
    <string name="percent_text">%</string>
    <string name="plus_text">+</string>
    <string name="minus_text">—</string>
    <string name="multiply_text">*</string>
    <string name="equal_text">=</string>
    <string name="comma_text">,</string>
    <string name="delete_text">←</string>
    <string name="division_text">/</string>
    <string name="zero_text">0</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="btn_float_history">Переключиться на историю</string>
    <string name="division_by_zero_text">Делить на ноль нельзя!</string>
</resources>