<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyPowder">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="24dp"
        android:textAlignment="viewStart"
        android:textSize="46sp"
        android:textStyle="bold"
        tools:text="4 + 4" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp">

        <Button
            android:id="@+id/clearButton"
            style="@style/OperatorButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="2dp"
            android:text="@string/clear_text" />

        <Button
            android:id="@+id/bracketButton"
            style="@style/OperatorButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="102dp"
            android:text="@string/bracket_text" />

        <Button
            android:id="@+id/percentButton"
            style="@style/OperatorButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="202dp"
            android:text="@string/percent_text" />

        <Button
            android:id="@+id/divButton"
            style="@style/OperatorButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="302dp"
            android:text="@string/division_text" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp">

        <Button
            android:id="@+id/digitSevenButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="2dp"
            android:text="@string/seven_text" />

        <Button
            android:id="@+id/digitEightButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="102dp"
            android:text="@string/eight_text" />

        <Button
            android:id="@+id/digitNineButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="202dp"
            android:text="@string/nine_text" />

        <Button
            android:id="@+id/multButton"
            style="@style/OperatorButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="302dp"
            android:text="@string/multiply_text" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp">

        <Button
            android:id="@+id/digitFourButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="2dp"
            android:text="@string/four_text" />

        <Button
            android:id="@+id/digitFiveButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="102dp"
            android:text="@string/five_text" />

        <Button
            android:id="@+id/digitSixButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="202dp"
            android:text="@string/six_text" />

        <Button
            android:id="@+id/minusButton"
            style="@style/OperatorButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="302dp"
            android:text="@string/minus_text" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp">

        <Button
            android:id="@+id/digitOneButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="2dp"
            android:text="@string/one_text" />

        <Button
            android:id="@+id/digitTwoButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="102dp"
            android:text="@string/two_text" />

        <Button
            android:id="@+id/digitThreeButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="202dp"
            android:text="@string/three_text" />

        <Button
            android:id="@+id/plusButton"
            style="@style/OperatorButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="302dp"
            android:text="@string/plus_text" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp">

        <Button
            android:id="@+id/digitZeroButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="2dp"
            android:text="@string/zero_text" />

        <Button
            android:id="@+id/commaButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="102dp"
            android:text="@string/comma_text" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/DigitButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="202dp"
            android:text="@string/delete_text" />

        <Button
            android:id="@+id/equalButton"
            style="@style/OperatorButtonFrame"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginStart="302dp"
            android:text="@string/equal_text" />

    </FrameLayout>


</FrameLayout>