<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyPowder"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="24dp"
        android:textAlignment="viewStart"
        android:textSize="46sp"
        android:layout_weight="1"
        android:textStyle="bold"
        tools:text="4 + 4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:weightSum="100">

        <Button
            android:id="@+id/clearButton"
            style="@style/OperatorButtonLinear"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/clear_text" />

        <Button
            android:id="@+id/bracketButton"
            style="@style/OperatorButtonLinear"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/bracket_text" />

        <Button
            android:id="@+id/percentButton"
            style="@style/OperatorButtonLinear"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/percent_text" />

        <Button
            android:id="@+id/divButton"
            style="@style/OperatorButtonLinear"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/division_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:weightSum="100">

        <Button
            android:id="@+id/digitSevenButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/seven_text" />

        <Button
            android:id="@+id/digitEightButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/eight_text" />

        <Button
            android:id="@+id/digitNineButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/nine_text" />

        <Button
            android:id="@+id/multButton"
            style="@style/OperatorButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/multiply_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:weightSum="100">

        <Button
            android:id="@+id/digitFourButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/four_text" />

        <Button
            android:id="@+id/digitFiveButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/five_text" />

        <Button
            android:id="@+id/digitSixButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/six_text" />

        <Button
            android:id="@+id/minusButton"
            style="@style/OperatorButtonLinear"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="25"
            android:text="@string/minus_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:weightSum="100"
        android:paddingEnd="2dp">

        <Button
            android:id="@+id/digitOneButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/one_text" />

        <Button
            android:id="@+id/digitTwoButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/two_text" />

        <Button
            android:id="@+id/digitThreeButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/three_text" />

        <Button
            android:id="@+id/plusButton"
            style="@style/OperatorButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/plus_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:weightSum="100"
        android:paddingEnd="2dp">

        <Button
            android:id="@+id/digitZeroButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/zero_text" />

        <Button
            android:id="@+id/commaButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/comma_text" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/DigitButtonLinear"
            android:layout_width="80dp"
            android:layout_weight="25"
            android:layout_height="80dp"
            android:text="@string/delete_text" />

        <Button
            android:id="@+id/equalButton"
            style="@style/OperatorButtonLinear"
            android:layout_weight="25"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/equal_text" />


    </LinearLayout>










</LinearLayout>
